# rustmine

./: .gitignore  Cargo.toml  README.md
codegen/: Cargo.toml
codegen/generator/: grab_data.ps1
codegen/src/: main.rs
example_server/: Cargo.toml
example_server/src/: main.rs
rustmine_lib/: Cargo.toml
rustmine_lib/src/: biomes.rs  blocks.rs  chunk.rs  component.rs  data.rs  dimension.rs  game_profile.rs  lib.rs
rustmine_lib/src/chunk/: mod.rs
rustmine_lib/src/common/: configuration_state.rs  mod.rs
rustmine_server/: Cargo.toml
rustmine_server/src/: config.rs  lib.rs  main.rs  player.rs
rustmine_server/src/event/: mod.rs  player_events.rs  server_events.rs
rustmine_server/src/packet/: mod.rs
rustmine_server/src/packet/clientbound/: login.rs  mod.rs  status.rs
rustmine_server/src/packet/clientbound/configuration/: config_plugin_message.rs  mod.rs  select_known_packs.rs
rustmine_server/src/packet/serverbound/: handshake.rs  login.rs  status.rs
rustmine_server/src/packet/serverbound/configuration/: client_information.rs  client_known_packs.rs  config_plugin_message.rs  mod.rs
rustmine_server/src/world/: mod.rs
